--- a/cetak-kupon/splash.html
+++ b/cetak-kupon/splash.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Gebyar BNI</title>
+		<title>Cetak Kupon</title>
 		<link rel="stylesheet" href="assets/common/css/global.css">
 		<link rel="stylesheet" href="assets/lib/ripple/ripple.css">
 		<script>
@@ -12,6 +12,7 @@
 		</script>
 	</head>
 	<body>
-		<img class="ripple" onclick="next()" src="assets/common/img/img17.png" style="width: 100%; height: 100%; object-fit: fill;">
+		<img onclick="next()" src="assets/common/img/splash_bg.png" style="width: 100%; height: 100%; object-fit: fill;">
+		<img onclick="next()" src="assets/common/img/splash_img.png" style="position: fixed; left: 30px; right: 30px; top: 330px; width: calc(100% - 60px); height: 150px; object-fit: contain;">
 	</body>
 </html>
